SERVER-32606 Oplog read time may only decrease during rollback